[package]
name = "cosmian_kms_server_database"
version = "5.15.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crate containing the database for the Cosmian KMS server and the supported stores"

[lints]
workspace = true

[lib]
doctest = false

[features]
non-fips = [
  "cosmian_kms_crypto/non-fips",
  "cosmian_kmip/non-fips",
  "cosmian_findex",
  "cosmian_sse_memories",
  "cosmian_sse_memories/redis-mem",
  "redis",
]
# Enable interop test operations (should only be used for testing)
interop = ["cosmian_kmip/interop"]

[dependencies]
async-trait = { workspace = true }
cosmian_kmip = { path = "../kmip", version = "5.15.0" }
cosmian_kms_crypto = { path = "../crypto", version = "5.15.0" }
cosmian_kms_interfaces = { path = "../interfaces", version = "5.15.0" }
cosmian_findex = { version = "8.0", optional = true }
cosmian_logger = { workspace = true }
cosmian_sse_memories = { version = "8.0", optional = true }
lru = { workspace = true }
num_cpus = { workspace = true }
rawsql = "0.1"
redis = { version = "0.32", features = [
  "aio",
  "ahash",
  "script",
  "connection-manager",
  "tokio-comp",
], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
mysql_async = "0.36"
tokio-rusqlite = "0.7"
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
