[package]
name = "cosmian_kms_server_database"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crate containing the database for the Cosmian KMS server and the supported stores"

[lints]
workspace = true

[lib]
doctest = false

[features]
non-fips = [
  "cosmian_kms_crypto/non-fips",
  "cosmian_kmip/non-fips",
  "cosmian_findex",
  "cosmian_sse_memories",
  "cosmian_sse_memories/redis-mem",
  "redis",
]
# Enable interop test operations (should only be used for testing)
interop = ["cosmian_kmip/interop"]

[dependencies]
async-trait = { workspace = true }
cosmian_kmip = { path = "../kmip", version = "5.17.0" }
cosmian_kms_crypto = { path = "../crypto", version = "5.17.0" }
cosmian_kms_interfaces = { path = "../interfaces", version = "5.17.0" }
cosmian_findex = { workspace = true, optional = true }
cosmian_logger = { workspace = true }
cosmian_sse_memories = { workspace = true, optional = true }
lru = { workspace = true }
num_cpus = { workspace = true }
rawsql = { workspace = true }
redis = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio-postgres = { workspace = true }
postgres-openssl = { workspace = true }
deadpool-postgres = { workspace = true }
mysql_async = { workspace = true }
openssl = { workspace = true }
tokio-rusqlite = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
