[package]
name = "test_kms_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Run a test KMS server for testing purposes"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = ["cosmian_kms_client/fips", "cosmian_kms_server/fips"]

[[bench]]
name = "benches"
harness = false

[dependencies]
actix-server = { workspace = true }
cosmian_kms_client = { path = "../kms_client" }
cosmian_kms_server = { path = "../server", features = ["insecure"] }
cosmian_logger = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.19"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = [
  "html_reports",
  "async_tokio",
], default-features = false }
zeroize = { workspace = true }
