[package]
name = "test_kms_server"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Run a test KMS server for testing purposes"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = ["cosmian_kms_client/non-fips", "cosmian_kms_server/non-fips"]

[[bench]]
name = "benches"
harness = false

[dependencies]
actix-server = { workspace = true }
cosmian_kms_client = { path = "../kms_client", version = "5.16.2" }
cosmian_kms_server = { path = "../server", features = [
  "insecure",
], version = "5.16.2" }
cosmian_logger = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.5", features = [
  "html_reports",
  "async_tokio",
], default-features = false }
zeroize = { workspace = true }
