[package]
name = "kms_test_server"
version = "4.13.5"
edition = "2021"

[lib]
name = "kms_test_server"
crate-type = ["rlib", "dylib"]

[dependencies]
actix-server = { workspace = true }
base64 = { workspace = true }
cosmian_kmip = { path = "../kmip" }
cosmian_kms_client = { path = "../client", default-features = false }
cosmian_kms_server = { path = "../server", features = [
  "insecure",
], default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
