[package]
name = "kms_test_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
actix-server = { workspace = true }
base64 = { workspace = true }
cosmian_kmip = { path = "../kmip" }
cosmian_kms_client = { path = "../client", default-features = false }
cosmian_kms_server = { path = "../server", features = [
  "insecure",
], default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
