[package]
name = "kms_test_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[[bench]]
name = "benches"
harness = false

[dependencies]
actix-server = { workspace = true }
base64 = { workspace = true }
cosmian_kmip = { path = "../kmip" }
cosmian_kms_client = { path = "../client", default-features = false }
cosmian_kms_server = { path = "../server", features = [
    "insecure",
], default-features = false }
cosmian_kms_server_database = { path = "../server_database" }
cosmian_logger = { path = "../logger" }
serde_json = { workspace = true }
tempfile = "3.1"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = [
    "html_reports",
    "async_tokio",
], default-features = false }
zeroize = { workspace = true }
