[package]
name = "cosmian_kms_ui_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = []

[dependencies]
cloudproof = { workspace = true }
cosmian_config_utils = { workspace = true }
cosmian_kmip = { path = "../kmip" }
cosmian_kms_access = { path = "../access" }
cosmian_logger = { workspace = true }
der = { workspace = true }
pem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
strum.workspace = true
base64.workspace = true
web-sys = { version = "0.3", features = ["console"] }
clap = { workspace = true, features = ["std", "derive"] }
x509-cert = { workspace = true, features = ["pem"] }
